feat: ui 컴포넌트 세팅.
