# api/swagger.yaml
@@ -25,6 +25,13 @@ definitions:
       title:
         type: string
     type: object
+  internal_adapter_rest.CreateSiteRequest:
+    properties:
+      host:
+        type: string
+      name:
+        type: string
+    type: object
   internal_adapter_rest.PostResource:
     properties:
       content:
@@ -62,6 +69,15 @@ definitions:
       username:
         type: string
     type: object
+  internal_adapter_rest.SiteResource:
+    properties:
+      host:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   internal_adapter_rest.TokenResource:
     description: 토큰 정보 리소스
     properties:
@@ -81,6 +97,18 @@ definitions:
           type: string
         type: array
       title:
+        type: string
+    type: object
+  internal_adapter_rest.UpdateSiteRequest:
+    properties:
+      name:
+        type: string
+    type: object
+  internal_adapter_rest.UploadFileResponse:
+    properties:
+      id:
+        type: integer
+      url:
         type: string
     type: object
   internal_adapter_rest.UserResource:
@@ -105,31 +133,37 @@ info:
   title: Friday.go API
   version: '{{.Version}}'
 paths:
-  /me:
+  /api/api/posts/{id}:
     get:
       consumes:
       - application/json
-      description: 회원 정보 조회 API
-      operationId: me
+      description: 포스트 조회 API
+      operationId: posts.find
+      parameters:
+      - description: 포스트 ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: 회원 정보 조회 성공
+          description: 포스트 조회 성공
           schema:
-            $ref: '#/definitions/internal_adapter_rest.UserResource'
-        "401":
-          description: 로그인 정보 없음
+            $ref: '#/definitions/internal_adapter_rest.PostResource'
+        "400":
+          description: 잘못된 요청
           schema:
             $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
         "500":
           description: 서버 오류
           schema:
             $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
-      summary: 회원 정보 조회
+      summary: 포스트 조회
       tags:
-      - auth
-  /posts:
+      - posts
+  /api/posts:
     get:
       consumes:
       - application/json
@@ -185,7 +219,7 @@ paths:
       summary: 포스트 생성
       tags:
       - posts
-  /posts/{id}:
+  /api/posts/{id}:
     delete:
       consumes:
       - application/json
@@ -213,35 +247,6 @@ paths:
           schema:
             $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
       summary: 포스트 삭제
-      tags:
-      - posts
-    get:
-      consumes:
-      - application/json
-      description: 포스트 조회 API
-      operationId: posts.find
-      parameters:
-      - description: 포스트 ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 포스트 조회 성공
-          schema:
-            $ref: '#/definitions/internal_adapter_rest.PostResource'
-        "400":
-          description: 잘못된 요청
-          schema:
-            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
-        "500":
-          description: 서버 오류
-          schema:
-            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
-      summary: 포스트 조회
       tags:
       - posts
     put:
@@ -279,6 +284,229 @@ paths:
       summary: 포스트 수정
       tags:
       - posts
+  /api/sites:
+    post:
+      consumes:
+      - application/json
+      description: 사이트 생성 API
+      operationId: sites.create
+      parameters:
+      - description: 사이트 생성 정보
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/internal_adapter_rest.CreateSiteRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 사이트 생성 성공
+          schema:
+            $ref: '#/definitions/internal_adapter_rest.SiteResource'
+        "400":
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "409":
+          description: 이메일 중복
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "500":
+          description: 서버 오류
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 사이트 생성
+      tags:
+      - sites
+  /api/sites/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 사이트 삭제 API
+      operationId: sites.delete
+      parameters:
+      - description: 사이트 ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: 사이트 삭제 성공
+          schema:
+            $ref: '#/definitions/internal_adapter_rest.SiteResource'
+        "400":
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "404":
+          description: 사이트 없음
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "500":
+          description: 서버 오류
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 사이트 삭제
+      tags:
+      - sites
+    get:
+      consumes:
+      - application/json
+      description: 사이트 조회 API
+      operationId: sites.find
+      parameters:
+      - description: 사이트 ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 사이트 조회 성공
+          schema:
+            $ref: '#/definitions/internal_adapter_rest.SiteResource'
+        "400":
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "404":
+          description: 사이트 없음
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 사이트 조회
+      tags:
+      - sites
+    put:
+      consumes:
+      - application/json
+      description: 사이트 수정 API
+      operationId: sites.update
+      parameters:
+      - description: 사이트 ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 사이트 수정 정보
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/internal_adapter_rest.UpdateSiteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 사이트 수정 성공
+          schema:
+            $ref: '#/definitions/internal_adapter_rest.SiteResource'
+        "400":
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "404":
+          description: 사이트 없음
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "500":
+          description: 서버 오류
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 사이트 수정
+      tags:
+      - sites
+  /api/sites/{id}/posts:
+    get:
+      consumes:
+      - application/json
+      description: 사이트 포스트 리스트 조회 API
+      operationId: sites.retrievePosts
+      parameters:
+      - description: 사이트 ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 사이트 포스트 리스트 조회 성공
+          schema:
+            items:
+              $ref: '#/definitions/internal_adapter_rest.PostResource'
+            type: array
+        "400":
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "404":
+          description: 사이트 없음
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 사이트 포스트 리스트 조회
+      tags:
+      - sites
+  /api/upload-file:
+    post:
+      consumes:
+      - multipart/form-data
+      description: 파일 업로드 API
+      operationId: files.upload
+      parameters:
+      - description: 파일
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 파일 업로드 성공
+          schema:
+            $ref: '#/definitions/internal_adapter_rest.UploadFileResponse'
+        "400":
+          description: 잘못된 요청
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "500":
+          description: 서버 오류
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 파일 업로드
+      tags:
+      - files
+  /me:
+    get:
+      consumes:
+      - application/json
+      description: 회원 정보 조회 API
+      operationId: me
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 회원 정보 조회 성공
+          schema:
+            $ref: '#/definitions/internal_adapter_rest.UserResource'
+        "401":
+          description: 로그인 정보 없음
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+        "500":
+          description: 서버 오류
+          schema:
+            $ref: '#/definitions/github_com_meteormin_friday_go_internal_app_errors.Error'
+      summary: 회원 정보 조회
+      tags:
+      - auth
   /sign-in:
     post:
       consumes:
