# internal/adapter/rest/upload_file.go
@@ -3,6 +3,7 @@ package rest
 import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
+	_ "github.com/meteormin/friday.go/internal/app/errors"
 	"github.com/meteormin/friday.go/internal/app/port"
 	"github.com/meteormin/friday.go/internal/core/http"
 	"path"
@@ -17,6 +18,18 @@ type UploadFileHandler struct {
 	useCase port.UploadFileUseCase
 }
 
+// UploadFile
+// @Summary 파일 업로드
+// @Description 파일 업로드 API
+// @ID files.upload
+// @Accept multipart/form-data
+// @Produce json
+// @Param file formData file true "파일"
+// @Success 201 {object} UploadFileResponse "파일 업로드 성공"
+// @Failure 400 {object} errors.Error "잘못된 요청"
+// @Failure 500 {object} errors.Error "서버 오류"
+// @Router /api/upload-file [post]
+// @Tags files
 func (handler *UploadFileHandler) uploadFile(ctx *fiber.Ctx) error {
 
 	uploadFile, err := ctx.FormFile("file")
@@ -52,7 +65,7 @@ func (handler *UploadFileHandler) uploadFile(ctx *fiber.Ctx) error {
 		return err
 	}
 
-	return ctx.JSON(UploadFileResponse{
+	return ctx.Status(fiber.StatusCreated).JSON(UploadFileResponse{
 		ID:  file.ID,
 		URL: path.Join("/files", convFilename),
 	})
